Thu Aug 25 17:15:01 2005  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/i2c/Makefile.am (module_LTLIBRARIES): Add all the
	drivers to the module_LTLIBRARIES instead of having separate 
	variables for them. Pointed out by Kristian Høgsberg.
	
2005-08-25  Kristian Høgsberg  <krh@redhat.com>

	* hw/xfree86/os-support/solaris/Makefile.am (EXTRA_DIST): Remove
	sun_inout.s so make dist works (discussed with Alan Coopersmith).

Wed Aug 24 15:39:07 2005  Søren Sandmann  <sandmann@redhat.com>

	* configure.ac: Add GLX_{INC,LIBS} for xprint.

	* hw/xfree86/dixmods/Makefile.am: Add @DIX_FLAGS@ to AM_CFLAGS

2005-08-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* hw/dmx/input/Makefile.am:
	Don't try to build dmx/input/lnx-*.c if <linux/keyboard.h> isn't found
	Don't try to build dmx/input/usb-*.c if <linux/input.h> isn't found

	* hw/dmx/Makefile.am: 
	Replace -rdynamic with $(LD_EXPORT_SYMBOLS_FLAG) for compatibility
	with compilers other than gcc
	
2005-08-22  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Fix linking errors for xprint.

2005-08-21  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	Huge cleanup.  Group into sections: hardware feature detection,
	extension detection/configuration, DDX options.  Make building of Xorg
	DDX fully optional.  Clarify and correct some help texts.  Change all
	comments to use dnl instead of #.  Quote all tests correctly, and guard
	pure-variable tests with 'x' (e.g. test $DMX = yes -> test "x$DMX" =
	xyes).  Since the DDXes seem to have pretty divergent extension support
	these days, get rid of EXTENSION_LIBS, DMX_EXTENSIONS and
	XPRINT_EXTENSIONS, and go back to building extension lists by hand in
	the DDX-specific sections.  Use portable POSIX constructs everywhere
	(e.g. test foo && test bar, instead of test foo -a bar).

	* configure.ac:
	Set _XSERVER64 on 64-bit architectures, and use x86_64 for host_cpu
	instead of amd64 (Jürg Billeter).
	
	* configure.ac: